src/objects/Glxy_LeaseAgencies__c.object
<CustomObject>
    <description>This table contains the Agency Space Assignments (ASA) data for Leases.</description>
    <fields>
        <fullName>ABCode__c</fullName>
        <formula>PBSABCode__r.AB_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AB Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASAIAAnnualRent__c</fullName>
        <formula>LeaseNumber__r.IA_Cost_Per_Sq_Ft__c *  ASA_IASqFt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASA IA Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASAID__c</fullName>
        <externalId>true</externalId>
        <label>ASAID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASANOAAnnualRent__c</fullName>
        <formula>(LeaseNumber__r.NOA_Rate_Per_Sq_Ft__c) *  (ASA_NOASqFt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASA NOA Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASA_IASqFt__c</fullName>
        <formula>IF((LeaseNumber__r.Total_IA_Sq_feet__c + LeaseNumber__r.Total_NOA_Sq_feet__c)=0,0,(LeaseNumber__r.Total_IA_Sq_feet__c / ( LeaseNumber__r.Total_IA_Sq_feet__c + LeaseNumber__r.Total_NOA_Sq_feet__c )) *  SquareFeet__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASA IA Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASA_NOASqFt__c</fullName>
        <formula>IF(( LeaseNumber__r.Total_IA_Sq_feet__c + LeaseNumber__r.Total_NOA_Sq_feet__c )=0,0,(LeaseNumber__r.Total_NOA_Sq_feet__c / ( LeaseNumber__r.Total_IA_Sq_feet__c + LeaseNumber__r.Total_NOA_Sq_feet__c )) *  SquareFeet__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASA NOA Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASA__c</fullName>
        <label>ASA</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Bureau_Name__c</fullName>
        <formula>PBSABCode__r.Agency_Bureau_Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Bureau Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseStructuredParkingSpaces__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Structured Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BaseSurfaceParkingSpaces__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Surface Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeaseNumber__c</fullName>
        <label>Lease Number</label>
        <referenceTo>Glxy_Lease__c</referenceTo>
        <relationshipName>Lease_Agencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lease_Asa_KeyVal__c</fullName>
        <label>Lease Asa KeyVal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBSABCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PBS AB Code</label>
        <referenceTo>PBS_AB_Code__c</referenceTo>
        <relationshipLabel>Lease Agencies</relationshipLabel>
        <relationshipName>Lease_Agencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REXUSABCode__c</fullName>
        <formula>REXUSPBSABCode__r.AB_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REXUS AB Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REXUSASAIAAnnualRent__c</fullName>
        <formula>LeaseNumber__r.IA_Cost_Per_Sq_Ft__c * REXUSASA_IASqFt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REXUS ASA IA Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REXUSASANOAAnnualRent__c</fullName>
        <formula>LeaseNumber__r.NOA_Rate_Per_Sq_Ft__c * REXUSASA_NOASqFt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REXUS ASA NOA Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REXUSASA_IASqFt__c</fullName>
        <formula>IF((LeaseNumber__r.Total_IA_Sq_feet__c + LeaseNumber__r.Total_NOA_Sq_feet__c)=0,0,(LeaseNumber__r.Total_IA_Sq_feet__c / ( LeaseNumber__r.Total_IA_Sq_feet__c + LeaseNumber__r.Total_NOA_Sq_feet__c )) * REXUSSquareFeet__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REXUS ASA IA Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REXUSASA_NOASqFt__c</fullName>
        <formula>IF(( LeaseNumber__r.Total_IA_Sq_feet__c + LeaseNumber__r.Total_NOA_Sq_feet__c )=0,0,(LeaseNumber__r.Total_NOA_Sq_feet__c / ( LeaseNumber__r.Total_IA_Sq_feet__c + LeaseNumber__r.Total_NOA_Sq_feet__c )) * REXUSSquareFeet__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REXUS ASA NOA Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REXUSASA__c</fullName>
        <label>REXUS ASA</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REXUSAgencyBureauName__c</fullName>
        <formula>REXUSPBSABCode__r.Agency_Bureau_Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REXUS Agency Bureau Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REXUSBaseStructuredParkingSpaces__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Parking spaces available in a parking structure/garage. (REXUS current Value)</description>
        <label>REXUS Base Structured Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REXUSBaseSurfaceParkingSpaces__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Parking spaces available in a parking lot. (REXUS current Value)</description>
        <label>REXUS Base Surface Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REXUSPBSABCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>REXUS PBS AB Code</label>
        <referenceTo>PBS_AB_Code__c</referenceTo>
        <relationshipLabel>Lease Agencies (REXUS PBS AB Code)</relationshipLabel>
        <relationshipName>Lease_Agencies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REXUSSquareFeet__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SQ Ft assigned at ASA Level (REXUS current Value)</description>
        <label>REXUS SquareFeet</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SquareFeet__c</fullName>
        <label>Square Feet</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Lease Agency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LeaseNumber__c</columns>
        <columns>ABCode__c</columns>
        <columns>ASA__c</columns>
        <columns>ASA_IASqFt__c</columns>
        <columns>ASAIAAnnualRent__c</columns>
        <columns>ASA_NOASqFt__c</columns>
        <columns>ASANOAAnnualRent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADA-{00000000}</displayFormat>
        <label>Lease Agency ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Agencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>